--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li class="header_button"><a href="/">Blog</a></li>
-                        <li class="header_button"><a href="event_list.html">Timeline</a></li>
+                        <li class="header_button"><a href="timeline/">Timeline</a></li>
                     </ul>
                 </nav>
                 
