--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,13 +7,13 @@ body {
     /*  HEADER  */
     /************/
 
-.page-header {
+.page_header {
     background-color: rgb(98, 203, 235);
     margin-top: 0;
     padding: 20px 20px 20px 20px;
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+.page_header h1, .page_header h1 a, .page_header h1 a:visited, .page_header h1 a:active {
     text-align: center;
     color: #ffffff;
     font-size: 36pt;
@@ -25,8 +25,7 @@ body {
     font-family: candara;
 }
 
-ul {
-    margin: 0;
+.page_header nav ul {
     margin-top: 30px;
     list-style-type: none;
     padding: 0;
@@ -34,7 +33,7 @@ ul {
     
 }
 
-li {
+.page_header nav ul li {
     display: inline-block;
     margin-right: 20px;
     margin-left: 20px
@@ -46,33 +45,25 @@ li {
     color: ivory;
 }
 
-    /*************/
-    /*  CONTENT  */
-    /*************/
+/***************/
+/*   CONTENT   */
+/***************/
 
-.content {
-    background-color: none;
+.content_container {
+    /*background-color: magenta;*/
     margin-left: auto;
     margin-right: auto;
+    padding-left: 5%;
+    padding-right: 5%;
 }
-
-.row {
-    padding-left: 50px;
-}
-.col-md-8 {
-
-    margin-left: 70px;
-    margin-right: 70px;
-}
-
 
 h1, h2, h3, h4 {
     font-family: candara;
 }
 
-.date {
-    color: #828282;
-}
+/****************/
+/*     POST     */
+/****************/
 
 .save {
     float: right;
@@ -81,18 +72,250 @@ h1, h2, h3, h4 {
 .post-form textarea, .post-form input {
     width: 100%;
 }
-
+/*
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
     font-size: 26pt;
     margin-right: 10px;
+}*/
+
+.post_wrapper {
+    /*background-color: rgb(79, 79, 204);*/
+    padding-top: 30px;
+    text-align: center;
+    margin-right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .post {
+    /*background-color: mediumturquoise;*/
+    display:inline-block;
     margin-bottom: 70px;
+
+    position: relative;
+    left: auto;
+    right: auto;
+
+    width: 100%
+}
+
+.date {
+    color: #828282;
+    text-align: left;
+    width: 100%;
 }
 
 .post h2 a, .post h2 a:visited {
-    color: #000000;
+    color: #5580dd;
+    float: left;
+    width: 100%;
+    text-align: left;
+    padding-bottom: 20px;
 }
+
+.post p {
+    text-align: left;
+}
+
+
+
+/***************************************/
+/*              TIMELINE               */
+/***************************************/
+/*
+.timeline_wrapper {
+    /*background-color: rgb(79, 79, 204);
+    padding-top: 30px;
+    text-align: center;/*
+    margin-right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+/*
+.side_container {
+    width: 100%
+}
+
+.timeline ul li {
+    list-style: none;
+    line-height: normal;
+    position: relative;
+}
+
+
+
+.timeline:before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    width: 2px;
+    height: 100%;
+    background: #c5c5c5;
+}
+/*
+.timeline {
+    background-color: khaki;
+    /*position: relative;
+    margin: 50px auto;
+    /*width: 1000px;
+
+}
+
+.timeline ul li {
+    background-color: lightcoral;
+    list-style: none;
+    line-height: normal;
+    position: relative;
+    width: 50%;
+    padding: 20px 20px;
+    box-sizing: border-box;
+}
+
+.left h4, .right h4 {
+    background-color: rgb(255, 215, 142);
+    border-radius: 25px;
+    box-shadow: 10px 15px 8px #5580dd;
+    margin-bottom: 25px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    clear: both;
+}/*
+.left {
+    float: left;/*
+    text-align: left;
+    width: 100%;
+}
+
+
+.left h4 {
+    
+    border-radius: 30px 10px 30px 30px;
+    padding-right: 30px;
+    float: left;
+    text-align: right;
+    width: 45%;
+}/*
+.right {
+    /*background-color: lightskyblue;
+    float: right;
+    width: 100%;
+}
+.right h4 {
+    border-radius: 10px 30px 30px 30px;
+    padding-left: 30px;
+    float: right;
+    text-align: left;
+    width: 50%;
+}
+/*
+.timeline ul li:before {
+    content: '';
+    background: #5580dd;
+    border-radius: 50%;
+    height: 10px;
+    position: absolute;
+    right: -6px;
+    /*top: 24px;
+    width: 10px;
+}
+.left h4:before , .right h4:before {
+    background: #5580dd;
+    border-radius: 50%;
+    content: '';
+    height: 20px;
+    left: 48.1%;
+    opacity: 0.5;
+    position: absolute;
+    /*right: -6px;
+    /*top: 24px;
+    width: 20px;
+}
+/*
+.left h4:before {
+    left: 48.1%;
+}
+.right h4:before {
+    left: 48.1%;
+}*/
+
+.timeline {
+    margin: 50px auto;
+    padding: 40px 0;
+    position: relative;
+    width: 1000px;
+}
+.timeline:before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    width: 2px;
+    height: 100%;
+    background: #c5c5c5;
+}
+.timeline ul {
+    margin: 0;
+    padding: 0;
+}
+.timeline ul li {
+    box-sizing: border-box;
+    line-height: normal;
+    list-style: none;
+    position: relative;
+    width: 47%;
+    padding: 0px 40px;
+}
+
+.timeline ul li:nth-child(odd) {
+    border-radius: 30px 10px 30px 30px;
+    float: left;
+    text-align: right;
+    clear: both;
+}
+.timeline ul li:nth-child(odd) {
+    border-radius: 30px 10px 30px 30px;
+}
+
+.timeline ul li:nth-child(even) {
+    border-radius: 10px 30px 30px 30px;
+    float: right;
+    text-align: left;
+    clear: both;
+}
+.timeline ul li:nth-child(even) {
+    border-radius: 10px 30px 30px 30px;
+}
+.event {
+    padding-bottom: 20px;
+}
+
+
+
+.timeline ul li:nth-child(odd):before {
+    right: -38.5px;
+}
+
+.timeline ul li:nth-child(even):before {
+    left: -36.5px;
+}
+
+.timeline ul li {
+    background-color: rgb(255, 214, 127);
+    height: 10%;/*
+    padding: 15px 15px;*/
+}
+
+/**********************/
+/*        DOTS        */
+/**********************/
+.timeline ul li:before {
+    content: '';
+    position: absolute;
+    top: -8px;
+    width: 15px;
+    height: 15px;
+    background: #5580dd;
+    border-radius: 50%;
+}
+/**********************/
