--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <header class="page-header">
+        <header class="page_header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
@@ -22,13 +22,11 @@
                 </nav>
                 
         </header>
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
+        <div class="content_container">
+                <!--<div class="col-md-8">-->
                     {% block content %}
                     {% endblock %}
-                </div>
-            </div>
+                <!--</div>-->
         </div>
     </body>
 </html>
