--- a/blog/templates/blog/event_list.html
+++ b/blog/templates/blog/event_list.html
@@ -1,15 +1,26 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
 
-<!--<h2>>timeline!</h2>-->
-    {% for post in posts %}
-        <div class="post">
-            <div class="date">
-                <p>published: {{ post.published_date }}</p>
-            </div>
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-    {% endfor %}
+
+
+{% block content %}
+<div class="timeline_wrapper">
+    
+    <div class="timeline">
+        <ul>
+            {% for event in events %}
+                <li>
+                
+                        <div class="event">
+                            <h4>{{ event.title }}</h4>
+                        </div>
+                
+                </li>
+            {% endfor %}
+            <div style="clear: both";}></div>
+        </ul>
+    </div>
+   
+<div>
 {% endblock %}
+
