--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+    <div class="post_wrapper">
     {% for post in posts %}
         <div class="post">
             <div class="date">
@@ -10,4 +11,5 @@
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
+    <div>
 {% endblock %}
