--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,14 +10,15 @@
     <body>
         <header class="page_header">
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'post_new' %}" class="top_menu"><span class="glyphicon glyphicon-plus"> New post</span></a>
+                <a href="{% url 'event_new' %}" class="top_menu"><span class="glyphicon glyphicon-plus"> New event</span></a>
             {% endif %}
-                <h1><a href="/">Laura with a B</a></h1>
-                <h5 class="moto">cause you can B whoever you want to B</h5>
+                <h1><a href="/">Laura Puckoriute</a></h1>
+                <h5 class="moto">Computer Science student at University of Birmingham</h5>
                 <nav>
                     <ul>
                         <li class="header_button"><a href="/">Blog</a></li>
-                        <li class="header_button"><a href="timeline/">Timeline</a></li>
+                        <li class="header_button"><a href="{% url 'event_list' %}">Timeline</a></li>
                     </ul>
                 </nav>
                 
