changed some css

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -85,6 +85,7 @@ h1, h2, h3, h4 {
     margin-right: 10%;
     padding-left: 10%;
     padding-right: 10%;
+    max-width: 1100px;
 }
 
 .post {
@@ -238,7 +239,6 @@ h1, h2, h3, h4 {
         width: 350px;
     }
     .timeline ul li {
-        /*width: 150px; */
         width: 76.55%;
     }
 
