--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -131,9 +131,7 @@ h1, h2, h3, h4 {
     content: '';
     position: absolute;
     left: 50%;
-    width: 2px;/*
-    top: 0px;
-    bottom: 0px;*/
+    width: 2px;
     height: 100%;
     background: #c5c5c5;
 }
