--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Laura Puckoriute</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -33,7 +34,7 @@
                 </nav>
 
         </header>
-        
+
         <div class="parallax">
             <div class="content_section">
                 {% block content %}
